# website

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: post-1.md  post-2.md
public/: post-1.md  style.css  tailwind.css
public/hljs/: DIGESTS.md  highlight.js  highlight.min.js
src/: about.rs  home.rs  main.rs  markdown.rs  post.rs  resume.rs
