[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-fullstack = "0.4.3"
dioxus-router = "0.4.3"
form_urlencoded = "1.2.1"
pulldown-cmark = "0.9.3"
time = { version = "0.3.31", features = ["macros"] }

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
